style(css): Stop activity title overflow

--- a/app/client/stylesheets/components/_pu-activity.scss
+++ b/app/client/stylesheets/components/_pu-activity.scss
@@ -33,6 +33,7 @@
       font-size: 15px;
       line-height: 18px;
       font-weight: 700;
+      width: 100%;
 
       > a:focus, > a:hover {
         color: inherit;
